--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,16 @@
   overflow: hidden;
 }
 
+.navbar {
+  background-color: hsl(115, 85%, 30%);
+  color: #fff !important;
+  padding: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 20px;
+}
+
 .landing-page {
   position: relative;
   width: 100vw;
@@ -19,7 +29,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('https://cdn.pixabay.com/photo/2017/07/13/08/59/greenhouse-2499758_1280.jpg');
+  background-image: url("../public/plants.jpg");
   background-size: 100% 100%;
   background-position: center;
   filter: brightness(0.8);
@@ -37,19 +47,20 @@
 }
 
 .landing_content {
- margin-top: 430px;
-  margin-left: 100px;
-  transform: translate(-50%, -50%);
-  z-index: 1;
-  text-align: center;
-  /* background-color: red; */
-  width: 400px;
-  height: 400px;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-  gap: 10px;
+ /* margin-top: 430px; */
+     position: relative;
+     left: 0%;
+     top: -2%;
+     z-index: 1;
+     text-align: center;
+     width: 25%;
+     height: fit-content;
+     display: flex;
+     flex-wrap: wrap;
+     align-items: center;
+     flex-direction: column;
+     justify-content: center;
+     gap: 10px;
 }
 
 .content p,
@@ -130,6 +141,7 @@
   }
 
   .aboutus_container {
+    position: relative;
     margin-top: 20px; /* Adjust as needed */
     width: 80%; /* Adjust as needed */
   }
