--- a/src/App.css
+++ b/src/App.css
@@ -30,9 +30,11 @@
   width: 100%;
   height: 100%;
   background-image: url("../public/plants.jpg");
-  background-size: 100% 100%;
-  background-position: center;
-  filter: brightness(0.8);
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .content {
   display: flex;
